commented: content remowe="Views\home\Index.cshtml" in csproj now it works so proud

--- a/WishList/WishList.csproj
+++ b/WishList/WishList.csproj
@@ -4,9 +4,9 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
-  <ItemGroup>
+  <!--<ItemGroup>
     <Content Remove="Views\Home\Index.cshtml" />
-  </ItemGroup>
+  </ItemGroup>-->
 
   <ItemGroup>
     <Folder Include="wwwroot\" />
